<resources>
    <string name="app_name">ScrollViewerGL</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="x_speed_label">X</string>
    <string name="y_speed_label">Y</string>

    <string name="prev_content_label">←</string>
    <string name="next_content_label">→</string>
    <string name="reset_label">Reset</string>
    <string name="add_image_label">Open Image</string>
</resources>
