<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="jp.co.sharp.scrollviewergl.FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <!--<TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />-->
    <android.opengl.GLSurfaceView
        android:id="@+id/glsurfaceview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="?metaButtonBarButtonStyle"
                    android:layout_weight="2.5"
                    android:text="@string/x_speed_label"/>

                <Button
                    android:id="@+id/x_speed_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="?metaButtonBarButtonStyle"
                    android:layout_weight="2"/>

                <SeekBar
                    android:id="@+id/x_speed_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:progress="1"
                    android:max="1280"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="?metaButtonBarButtonStyle"
                    android:layout_weight="2.5"
                    android:text="@string/y_speed_label"/>


                <Button
                    android:id="@+id/y_speed_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="?metaButtonBarButtonStyle"
                    android:layout_weight="2"/>

                <SeekBar
                    android:id="@+id/y_speed_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:progress="1"
                    android:max="1280"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/prev_content_button"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prev_content_label" />

                <Button
                    android:id="@+id/next_content_button"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next_content_label" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?metaButtonBarButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/reset_label" />

                <Button
                    android:id="@+id/dummy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?metaButtonBarButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/dummy_button" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
